# icon-changer

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md
.githooks/: pre-commit
src/: ansi_color_codes.hpp  bmp_file.cpp  bmp_file.hpp  cli.cpp  cli.hpp  gui.cpp  gui.hpp  ico_file.cpp  ico_file.hpp  icon.cpp  icon.hpp  icon_changer.cpp  icon_changer.hpp  logger.hpp  main.cpp  utility.cpp  utility.hpp
src/GUI/: GUI.cpp  GUI_private.hpp  GUI_public.hpp
tests/: CMakeLists.txt
tests/mocks/: icon_mock.hpp
tests/unit/: icon_changer_test.cpp  icon_test.cpp
